force-app/main/default/objects/copado__Selenium_Test_Suite__c/fields/copado__Apex_code_after_test__c.field-meta.xml
<CustomField>
    <fullName>copado__Apex_code_after_test__c</fullName>
    <inlineHelpText>Optional Apex code to execute after running this test suite. You can use variable {!NS} to be replaced with the Namespace for the running Environment.</inlineHelpText>
    <label>Apex code after test</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>