force-app/main/default/objects/copado__Selenium_Test_Suite__c/fields/copado__Apex_code_before_test__c.field-meta.xml
<CustomField>
    <fullName>copado__Apex_code_before_test__c</fullName>
    <inlineHelpText>Optional Apex code to execute before running this test suite.  It can be used to clean up or create data. You can use variable {!NS} to be replaced with the Namespace for the running Environment.</inlineHelpText>
    <label>Apex code before test</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>